added scss constants

--- a/roboto.css
+++ b/roboto.css
@@ -76,7 +76,7 @@
 }
 
 @font-face {
-    font-family: 'robotom-edium';
+    font-family: 'robotom-medium';
     src: url('roboto-medium.eot');
     src: url('roboto-medium.eot?#iefix') format('embedded-opentype'),
          url('roboto-medium.woff') format('woff'),
