--- a/roboto.css
+++ b/roboto.css
@@ -14,70 +14,70 @@
 
 @font-face {
     font-family: 'roboto-bold';
-    src: url('roboto-bold.ttf') format('truetype');
+    src: url('fonts/roboto-bold.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-bold-italic';
-    src: url('roboto-bold-italic.ttf') format('truetype');
+    src: url('fonts/roboto-bold-italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-italic';
-    src: url('roboto-italic.ttf') format('truetype');
+    src: url('fonts/roboto-italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-light';
-    src: url('roboto-light.ttf') format('truetype');
+    src: url('fonts/roboto-light.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-light-italic';
-    src: url('roboto-light-italic.ttf') format('truetype');
+    src: url('fonts/roboto-light-italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'robotom-medium';
-    src: url('roboto-medium.ttf') format('truetype');
+    src: url('fonts/roboto-medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-medium-italic';
-    src: url('roboto-medium-italic.ttf') format('truetype');
+    src: url('fonts/roboto-medium-italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-regular';
-    src: url('roboto-regular.ttf') format('truetype');
+    src: url('fonts/roboto-regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-thin';
-    src: url('roboto-thin.ttf') format('truetype');
+    src: url('fonts/roboto-thin.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'roboto-thin-italic';
-    src: url('roboto-thin-italic.ttf') format('truetype');
+    src: url('fonts/roboto-thin-italic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
